@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - now using Dist::Zilla::Role::ModuleMetadata to use a cached object
+            for efficiency
 
 0.010     2015-01-03 20:48:28Z
           - bump Module::Metdata prereq for $VERSION parsing (RT#101095)
